shiny-server 1.1.1
--------------------------------------------------------------------------------

* Leverage site_dir when hosting in user_dirs mode; user_dirs will now respect the directory_index setting and host static assets other than Shiny applications.

shiny-server 1.1.0
--------------------------------------------------------------------------------

* Added support for custom page templates -- exposing the ability to customize
  the static pages generated by Shiny Server for directory listings or errors.

* Created 'user_dirs' mode and the special ':HOME_USER:' run_as user to replace
  'user_apps'.

* Leverage bash when spawning Shiny processes on behalf of other users, as in 
  'user_dirs' mode.

* Bug fix: Make compatible with loading content from Shiny Server in an iframe 
  with third-party cookies blocked.

* Bug fix: Restored compatibility with IE8 Standards Mode 

shiny-server 1.0.0
--------------------------------------------------------------------------------

* Additional reliability testing.

shiny-server 0.5.0
--------------------------------------------------------------------------------

* Added various quick-start configurations as described at: 
  http://rstudio.github.io/shiny-server/latest/#quick-start

shiny-server 0.4.2
--------------------------------------------------------------------------------

* BREAKING CHANGE: Deprecatedd `application` setting in favor of nested 
  ``location` blocks.

* Allow client to configure which network techniques should be used to connect
  to the server using the keyboard shortcut 'ctrl+shift+A'.

* Properly set working directory of spawned Shiny Processes to the associated
  application's directory to honor local .Renviron and family.

* Provide a logrotate configuration for /var/log/shiny-server.log where 
  logrotate is available.

* Various memory leak and stability improvements.

shiny-server 0.4.0
--------------------------------------------------------------------------------
