@@ -1,5 +1,5 @@
 ---
-title: "Reactive Doc"
+title: "Shiny Doc"
 output: html_document
 runtime: shiny
 ---
