@@ -103,9 +103,9 @@
         <p>If you're really stuck <em>and you've read the relevant sections in <a href="http://rstudio.github.io/shiny-server/latest/">the Admin Guide</a></em> then please ask for help on <a href="https://groups.google.com/forum/#!forum/shiny-discuss">the mailing list</a>.</p>
         
         <h2><pre>rmarkdown</pre></h2>
-        <p>Once you have Shiny working properly (the top application on the right sidebar), you can optionally proceed to setup rmarkdown to enable your server to host reactive R Markdown documents using the <code>rmarkdown</code> package.</p>
+        <p>Once you have Shiny working properly (the top application on the right sidebar), you can optionally proceed to setup rmarkdown to enable your server to host Shiny docs using the <code>rmarkdown</code> package.</p>
 
-        <p>Once you have <code>rmarkdown</code> installed, the lower example to the right should also be available. Once both examples are running, you're all set to host both Shiny applications and reactive documents!</p>
+        <p>Once you have <code>rmarkdown</code> installed, the lower example to the right should also be available. Once both examples are running, you're all set to host both Shiny applications and Shiny docs!</p>
 
         <h2>All Done?</h2>
         <p>Once you can see the Shiny application on the right, you're off to the races! You can look at <a href="http://shiny.rstudio.com">shiny.rstudio.com</a> to take a deeper dive into Shiny or take a look at some of the <a href="http://rstudio.github.io/shiny-server/latest/#quick-start">Shiny Server Quick Start Guides</a> to learn about some of the different things Shiny Server can do.</p>
@@ -120,7 +120,7 @@
 
         <iframe src="./sample-apps/rmd" style="border: 1px solid #AAA; width: 290px; height: 420px"></iframe>
         <div class="caption">
-          With Shiny and <code>rmarkdown</code> installed, you should see a reactive document above.
+          With Shiny and <code>rmarkdown</code> installed, you should see a Shiny doc above.
         </div>
       </div>
     </div>
